--- a/FishingStorePostgress/requirements.txt
+++ b/FishingStorePostgress/requirements.txt
@@ -1,1 +1,11 @@
-Django~=3.2.10
+asgiref==3.5.2
+dj-config-url==0.1.1
+Django==3.2.13
+django-environ==0.8.1
+Pillow==9.1.1
+psycopg2-binary==2.9.3
+pytz==2022.1
+sqlparse==0.4.2
+django-cors-headers==3.12.0
+gunicorn==20.1.0
+whitenoise==6.2.0
